--- a/.github/workflows/run-top-model-bot.yml
+++ b/.github/workflows/run-top-model-bot.yml
@@ -26,8 +26,10 @@ jobs:
         run: |
           pip install poetry
 
-      - name: Regenerate lock file
-        run: poetry lock
+      - name: Force regenerate lock file
+        run: |
+          rm -f poetry.lock
+          poetry lock
       
       - name: Install dependencies with Poetry
         run: |
@@ -36,9 +38,10 @@ jobs:
       - name: Run Top Model Bot
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-          METACULUS_TOKEN: ${{ secrets.METACULUS_TOKEN }}
+          METACULUS_API_KEY: ${{ secrets.METACULUS_API_KEY }}
           # The SEARCH_PROVIDER_API_KEY is optional if web scraping works reliably
           # SEARCH_PROVIDER_API_KEY: ${{ secrets.SEARCH_PROVIDER_API_KEY }}
         run: poetry run python main_with_no_framework.py
+
 
 
