--- a/.github/workflows/run-top-model-bot.yml
+++ b/.github/workflows/run-top-model-bot.yml
@@ -37,11 +37,10 @@ jobs:
       
       - name: Run Top Model Bot
         env:
+          PYTHONPATH: .
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
           METACULUS_API_KEY: ${{ secrets.METACULUS_API_KEY }}
           # The SEARCH_PROVIDER_API_KEY is optional if web scraping works reliably
           # SEARCH_PROVIDER_API_KEY: ${{ secrets.SEARCH_PROVIDER_API_KEY }}
         run: poetry run python main_with_no_framework.py
-
-
 
