--- a/.github/workflows/run-top-model-bot.yml
+++ b/.github/workflows/run-top-model-bot.yml
@@ -37,10 +37,15 @@ jobs:
       
       - name: Run Top Model Bot
         env:
-          # We set keys here, but set PYTHONPATH directly in the command for reliability
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
           METACULUS_API_KEY: ${{ secrets.METACULUS_API_KEY }}
           # The SEARCH_PROVIDER_API_KEY is optional if web scraping works reliably
           # SEARCH_PROVIDER_API_KEY: ${{ secrets.SEARCH_PROVIDER_API_KEY }}
-        run: PYTHONPATH=. poetry run python main_with_no_framework.py
+        run: |
+          # Instead of `poetry run`, we find the virtualenv path,
+          # activate it, and then run python directly.
+          # This is a more robust way to ensure the correct paths are used.
+          VENV_PATH=$(poetry env info -p)
+          source $VENV_PATH/bin/activate
+          python main_with_no_framework.py
 
