--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requests = "^2.31.0"
 python-dotenv = "^1.0.1"
 beautifulsoup4 = "^4.12.3"
 openai = "^1.23.6"
-forecasting-tools = {git = "https://www.google.com/search?q=https://github.com/Metaculus/forecasting-tools.git"}
+forecasting-tools = {git = "https://github.com/Metaculus/forecasting-tools.git"}
 
 [build-system]
 requires = ["poetry-core"]
