--- a/.github/workflows/run-top-model-bot.yml
+++ b/.github/workflows/run-top-model-bot.yml
@@ -1,43 +1,53 @@
-# ./.github/workflows/run-top-model-bot.yml
-# This workflow runs the main_with_no_framework.py script, configured for the Top Model Bot.
-
-name: Run Top Model Bot
+name: Forecast on new AI tournament questions
 
 on:
-  # Runs every hour
-  schedule:
-    - cron: '0 * * * *'
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  schedule:
+    - cron: "*/20 * * * *" # runs every 20 minutes. Make sure to skip already forecasted questions!
 
+# Add concurrency group to prevent parallel runs
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: false
+
+
+# Daily job to run the simple forecast bot
 jobs:
-  forecast:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+  forecast_job:
+    runs-on: ubuntu-latest # determines the machine that will run the job - keep as is
+    steps: # sets up the steps that will be run in order
+      # setup repository with all necessary dependencies - keep as is
+      - name: Check out repository
+        uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-
-      - name: Install Poetry
+          python-version: "3.11"
+      - name: Install poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
+      # Adding the below will make the workflow faster, but will mean you don't automatically get updates from forecasting-tools and other packages
+      # - name: Load cached venv
+      #   id: cached-poetry-dependencies
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: .venv
+      #     key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Install dependencies
+        run: poetry install --no-interaction --no-root
+      - name: Run bot
         run: |
-          pip install poetry
-
-      - name: Force regenerate lock file
-        run: |
-          rm -f poetry.lock
-          poetry lock
-      
-      - name: Install dependencies with Poetry
-        run: |
-          poetry install --no-root
-      
-      - name: Run Top Model Bot
+          poetry run python main.py
+        # this reads the environment variables from the github repository.
+        # Store under Settings --> Secrets and variables --> Actions
         env:
+          METACULUS_TOKEN: ${{ secrets.METACULUS_TOKEN }} # replace this with the name of the variable under which you stored your own Metaculus token
+          TAVILY_API_KEY: ${{ secrets.TAVILY_API_KEY }}
+          EXA_API_KEY: ${{ secrets.EXA_API_KEY }}
+          NEWSAPI_API_KEY: ${{ secrets.NEWSAPI_API_KEY }}
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
-          METACULUS_TOKEN: ${{ secrets.METACULUS_TOKEN }}
-          # The SEARCH_PROVIDER_API_KEY is optional if web scraping works reliably
-          # SEARCH_PROVIDER_API_KEY: ${{ secrets.SEARCH_PROVIDER_API_KEY }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          ASKNEWS_CLIENT_ID: ${{ secrets.ASKNEWS_CLIENT_ID }}
+          ASKNEWS_SECRET: ${{ secrets.ASKNEWS_SECRET }}
