--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "metac-bot-template"
 version = "0.1.0"
 description = ""
-authors = ["samcodes"]
+authors = ["Vasile Popescu <elisescu@elisescu.com>"]
 readme = "README.md"
 package-mode = false
 
