fix: Add all required project dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ asknews = "^0.11.2"
 numpy = "^2.3.0"
 python-dotenv = "^1.0.1"
 forecasting-tools = "^0.2.54"
+beautifulsoup4 = "^4.13.5"
+newsapi-python = "^0.2.7"
 
 
 [tool.poetry.group.dev.dependencies]
